@@ -5,6 +5,9 @@
     * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass.
       Utilize gtk_dialog_get_content_area in get_filter_button.
 
+    * src/dialogs/geda_image_chooser.c: Utilize gtk_dialog_get_content_area in
+      geda_image_chooser_constructor.
+
 2019-10-22 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_bulb.c: Add Doxygen code/endcode tags in
